OpenTTY Java Edition 1.16.1
Copyright (C) 2025 - Mr. Lima

[ _Commands_ ]

- 

[ _Updates_ ]

- **Audio API** added support to play **.midi** files
- **Lua** added support for `repeat until [expr]` loops
- **Lua** added default library `socket` with network interfaces
- **Lua** `io` library added new function `close(stream)` to close interfaces
- **Lua** removed bug that pcall recognizes string function name to call
- Classes **MIDletControl** and **Connect** have been merged

[ _Notes_ ]